--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
 		"@astrojs/prefetch": "^0.4.1",
 		"@astrojs/react": "^3.1.0",
 		"@astrojs/rss": "^4.0.5",
+		"@biomejs/biome": "^1.9.4",
 		"astro": "4.5.4",
 		"satori": "0.10.3",
 		"satori-html": "^0.3.2",
 		"sharp": "^0.32.4",
+		"simple-icons-astro": "^15.1.0",
 		"typescript": "^5.4.2"
 	},
 	"packageManager": "pnpm@8.6.1"
