--- a/package.json
+++ b/package.json
@@ -1,59 +1,53 @@
 {
-	"name": "astro-cactus",
-	"version": "2.6.0",
-	"private": false,
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"sync": "astro sync",
-		"check": "astro check",
-		"build": "astro build",
-		"postbuild": "pagefind --source dist",
-		"preview": "astro preview",
-		"format": "prettier -w --plugin-search-dir=. --cache ."
-	},
-	"devDependencies": {
-		"@astrojs/mdx": "^2.2.0",
-		"@astrojs/sitemap": "^3.1.1",
-		"@astrojs/tailwind": "5.1.0",
-		"@resvg/resvg-js": "^2.4.1",
-		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/typography": "^0.5.9",
-		"@types/eslint": "^8.44.2",
-		"@types/prettier": "^2.7.3",
-		"@typescript-eslint/eslint-plugin": "^5.62.0",
-		"@typescript-eslint/parser": "^5.62.0",
-		"astro-eslint-parser": "^0.14.0",
-		"autoprefixer": "^10.4.15",
-		"eslint": "^8.47.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-import-resolver-typescript": "^3.6.0",
-		"eslint-plugin-astro": "^0.27.2",
-		"eslint-plugin-import": "^2.28.0",
-		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-prettier": "^4.2.1",
-		"postcss": "^8.4.28",
-		"postcss-html": "^1.5.0",
-		"prettier": "^3.5.3",
-		"prettier-plugin-astro": "0.11.0",
-		"prettier-plugin-tailwindcss": "^0.3.0",
-		"remark-unwrap-images": "^3.0.1",
-		"tailwindcss": "^3.3.3"
-	},
-	"dependencies": {
-		"@astrojs/check": "^0.5.9",
-		"@astrojs/prefetch": "^0.4.1",
-		"@astrojs/react": "^3.1.0",
-		"@astrojs/rss": "^4.0.5",
-		"@biomejs/biome": "^1.9.4",
-		"@pagefind/default-ui": "^1.3.0",
-		"astro": "4.5.4",
-		"pagefind": "^1.3.0",
-		"satori": "0.10.3",
-		"satori-html": "^0.3.2",
-		"sharp": "^0.32.4",
-		"simple-icons-astro": "^15.1.0",
-		"typescript": "^5.4.2"
-	},
-	"packageManager": "pnpm@8.6.1"
+  "name": "astro-cactus",
+  "version": "2.6.0",
+  "private": false,
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "sync": "astro sync",
+    "check": "astro check",
+    "build": "astro build",
+    "postbuild": "pagefind --site dist",
+    "preview": "astro preview",
+    "format": "biome format --write src/**/*"
+  },
+  "devDependencies": {
+    "@astrojs/mdx": "^2.2.0",
+    "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/tailwind": "5.1.0",
+    "@resvg/resvg-js": "^2.4.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/eslint": "^8.44.2",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "astro-eslint-parser": "^0.14.0",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.47.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-astro": "^0.27.2",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "postcss": "^8.4.28",
+    "postcss-html": "^1.5.0",
+    "remark-unwrap-images": "^3.0.1",
+    "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "@astrojs/check": "^0.5.9",
+    "@astrojs/prefetch": "^0.4.1",
+    "@astrojs/react": "^3.1.0",
+    "@astrojs/rss": "^4.0.5",
+    "@biomejs/biome": "^1.9.4",
+    "@pagefind/default-ui": "^1.3.0",
+    "astro": "4.5.4",
+    "pagefind": "^1.3.0",
+    "satori": "0.10.3",
+    "satori-html": "^0.3.2",
+    "sharp": "^0.32.4",
+    "simple-icons-astro": "^15.1.0",
+    "typescript": "^5.4.2"
+  },
+  "packageManager": "pnpm@10.12.1"
 }
